--- a/style.css
+++ b/style.css
@@ -5,10 +5,14 @@
 }
 
 body {
+    position: relative;
+    overflow-x: hidden;
     background-color: #0c082b;
     background-image: url("assets/images/background-desktop.png");
     background-size: cover;
     color: #FFF;
+    font-family: "Inconsolata", sans-serif;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,8 +20,52 @@ body {
     margin: 0;
     min-height: 100vh;
     font-size: 1rem;
-    font-family: "Inconsolata", sans-serif;
-    padding: 2rem;
+}
+
+.bg-lines {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+}
+
+.bg-squiggle-top {
+    position: absolute;
+    top: 10%;
+    right: 0;
+    z-index: -1;
+    width: 20%;
+}
+
+.bg-squiggle-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    width: 50%;
+}
+
+@media (max-width: 768px) {
+    body {
+        background-image: url("assets/images/background-mobile.png");
+    }
+
+    .bg-squiggle-top {
+        width: 150px;
+        top: 5%;
+    }
+
+    .bg-squiggle-bottom {
+        width: 200px;
+    }
+
+    .form {
+        width: 100%;
+        padding: 1rem;
+    }
 }
 
 @font-face {
